[workspace]
members = ["kaiv", "kaiv-cli", "kaiv-lsp", "kaiv-wasm"]
# kaiv-wasm is excluded from the default build set: its
# `collation-colligo` feature unifies with kaiv-cli's default
# `collation-icu` when the two are built together, tripping the
# mutual-exclusion compile_error in kaiv/src/lib.rs. Build it
# explicitly (wasm-pack, or `cargo build -p kaiv-wasm`), where it is
# the only kaiv consumer and its feature set stands alone.
default-members = ["kaiv", "kaiv-cli", "kaiv-lsp"]
resolver = "2"

# Workspace-level release profile (package-level profiles on non-root
# members are silently ignored by Cargo). LTO matters for the CLI
# binary: the hot paths cross the kaiv-cli -> kaiv crate boundary.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
