[package]
name = "kaiv-lsp"
version = "0.1.0"
edition = "2021"
rust-version = "1.84.0"
description = "Language server for the kaiv file family: live per-file diagnostics from the kaiv pipeline"
license = "MIT"

[[bin]]
name = "kaiv-lsp"
path = "src/main.rs"

[dependencies]
# Offline core: diagnostics never need the net feature. The collation
# backend must match kaiv-cli's (the two are built together by the
# workspace and the kaiv features unify): ICU, not colligo.
kaiv = { path = "../kaiv", default-features = false, features = ["collation-icu"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
