[package]
name = "kaiv"
# 0.2.0: complete rewrite. 0.1.0 was the Era 1 "kv format" CLI tool;
# this is the library-only reference implementation of the current
# kaiv format (Levels 0-2), with the CLI split into `kaiv-cli`.
version = "0.2.0"
edition = "2021"
rust-version = "1.84.0"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kaiv-format/kaiv-rs"
authors = ["Bojan Đuričković"]
description = "Reference implementation of the kaiv format (Levels 0-2): lexer, compiler, denormalizer, schema compiler, validator"
keywords = ["kaiv", "configuration", "schema", "validation", "serialization"]
categories = ["parser-implementations", "encoding", "config", "data-structures"]
readme = "../README.md"
homepage = "https://kaiv.io/"
documentation = "https://docs.rs/kaiv"
# The conformance runner needs the spec repo checked out as a
# sibling; it is a development artifact, not part of the package.
exclude = ["tests"]

[package.metadata.docs.rs]
all-features = true

[features]
json = []
yaml = ["json", "dep:yaml-rust2"]
toml = ["json", "dep:toml"]

[dependencies]
toml = { version = "1.1.2", features = ["preserve_order"], optional = true }
yaml-rust2 = { version = "0.11.0", optional = true }
